--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.2.8",
     "@mui/styled-engine": "^5.2.6",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.22",
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.7.0"
   }
 }
