--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
+    "firebase": "^8.3.1",
     "history": "^4.10.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
