--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
     "firebase": "^8.3.1",
+    "framer-motion": "^6.2.8",
     "history": "^4.10.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
