--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
+    "file-saver": "^2.0.5",
     "firebase": "^8.3.1",
     "framer-motion": "^6.2.8",
     "history": "^4.10.1",
@@ -29,7 +30,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
